# cashmate

./: .env  .gitignore  README.md  cashmate.db  crud.py  database.py  main.py  manage.py  models.py  pyproject.toml  requirements.txt  requiriments.txt  schemas.py  services.py  utils.py
Cashmate/: asgi.py  settings.py  urls.py  wsgi.py
api/auth/: __init__.py  auth_crud.py  auth_models.py  auth_routes.py  auth_schemas.py  auth_utils.py
api/wallet/: __init__.py  wallet_crud.py  wallet_models.py  wallet_routes.py  wallet_schemas.py
core/: __init__.py  crud.py  database.py  db.py  exemple.env.txt  main.py  models.py  pyproject.toml  requeriments.txt  requiriments.txt  schemas.py  security.py
core/routes/: auth.py
dashboard/: models.py  views.py
dashboard/migrations/: 0001_initial.py
dashboard/templates/: dashboard.html
data/: cashmate.db
routes/: auth.py  auth_routers.py  auth_routes.py  transaction_routes.py  transactions.py
templates/account/: login.html  logout.html  password_change.html  signup.html
templates/socialaccount/: base_entrance.html  login.html
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profiles_avatar.py
users/static/css/: profiles.css
users/static/js/: profile.js
users/static/users/css/: modal.css
users/static/users/js/: modal.js
users/templates/: profiles.html
