[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.117.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt,bcrypyt]>=1.7.4",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
